
Package org.springframework.osgi.bundle
* deprecated BundleAction in favour of the BundleActionEnum enum 

Package org.springframework.osgi.config
* fixed race condition affecting configuration defaults in concurrent startups

Package org.springframework.osgi.context
* improved serviceability by using NamedThreadLocal
* added class loader aware default Class/Class[] property editors

Package org.springframework.osgi.compendium
* enhanced cm-properties to reflect Config Admin changes in the returned Properties object
* added new custom destruction callback to managed service factory objects

Package org.springframework.osgi.extender
* added JavaBean cache initialization for known types to reduce the number of class lookups during startup
* improved importers detection by avoiding early initialization of lazy beans
* align the bundles shutdown algorithm with the OSGi 4.2 Blueprint spec 

Package org.springframework.osgi.service
* improved serviceability by using NamedInheritableThreadLocal
* introduced support for dynamic service properties
* introduced InterfaceDetector for custom auto export scenarios
* deprecated AutoExport in favour of DefaultInterfaceDetector enum
* deprecated Cardinality class in favour of Availability enum
* improved laziness of the backing service retrieval
* added 'sticky' option on single importers to prevent rebinds if higher ranking services appear while the backing
  service is still alive
* deprecated ExportContextClassLoader in favour of ExportContextClassLoaderEnum
* deprecated ImportContextClassLoader in favour of ImportContextClassLoaderEnum
* service collection can now contain service references instead of just service proxies
* service exporter returns a 'safe' service registration that forbids unregistration
* added new custom callback signature to service importer and exporter listeners
* framework defined property take precedence over the user defined ones
* eliminated generated name property for inner/anonymous beans